# aws-cpp

./: .gitignore  CMakeLists.txt  README.md
src/main/: aws_auth.cpp  aws_auth.hpp  aws_get_request.cpp  aws_get_request.hpp  aws_s3_service.cpp  aws_s3_service.hpp  aws_sqs_exception.hpp  aws_sqs_service.cpp  aws_sqs_service.hpp  main.cpp
src/main/data/: aws_object.hpp  aws_response.hpp  aws_s3_object.hpp  aws_sqs_message.hpp
src/resources/: access.properties
src/test/: aws_auth_test.cpp  integration_test.cpp
